Fix sending message to telegram adapter